--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "robotframework-appiumwindows"
-version = "0.1.2"
+version = "0.1.3"
 description = "Robot Framework AppiumLibrary extension for Windows desktop automation using NovaWindows2 Driver instead of WinAppDriver."
 authors = [
   { name = "Huy Nguyen", email = "nguyenvanhuy0612@gmail.com" }
@@ -13,8 +13,8 @@ readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.10"
 dependencies = [
-  "robotframework>=7.3.2",
-  "Appium-Python-Client>=5.1.1"
+  "robotframework>=7.0.0",
+  "Appium-Python-Client>=5.0.0"
 ]
 classifiers = [
   "Development Status :: 3 - Alpha",
@@ -24,6 +24,8 @@ classifiers = [
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
+  "Programming Language :: Python :: 3.14",
   "Operating System :: Microsoft :: Windows",
   "License :: OSI Approved :: MIT License",
   "Intended Audience :: Developers",
